fixed spacing between category lists

--- a/assets/css/blogs.css
+++ b/assets/css/blogs.css
@@ -5,6 +5,7 @@
 
 .category {
     margin: 15px 30px;
+    margin-bottom: 5px;
     text-align: left;
 }
 
@@ -14,6 +15,7 @@
     margin-top: 10px;
     width: 85%;
     padding-left: 0px;
+    padding-bottom: 15px;
 }
 
 .category-list > li {
